@@ -1,3 +1,4 @@
+* Allow column sql types to be tested from the table handler
 * Add support for database connection parameters to configuration URI
 * Use immutable datastructures for Dict and MultiSelection fields
 * Skip warnings for non-interactive operations
